--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
           <div class="col-lg-7 m-auto ">
             <div class="row text-center">
               <div class="col-lg-4">
-                <img src="grape.PNG" class="img-luid" width="50px " style="margin-top: 280px;">
+                <img src="grape.png" class="img-luid" width="50px " style="margin-top: 280px;">
                 <h6>NATURAL</h6>
               </div>
               <div class="col-lg-4">
-                <img src="healthy.PNG" class="img-luid" width="50px" style="margin-top: 280px;">
+                <img src="healthy.png" class="img-luid" width="50px" style="margin-top: 280px;">
                 <h6>NATURAL</h6>
               </div>
               <div class="col-lg-4">
-                <img src="banana.PNG" class="img-luid" width="50px" style="margin-top: 280px;">
+                <img src="banana.png" class="img-luid" width="50px" style="margin-top: 280px;">
                 <h6>NATURAL</h6>
               </div>
             </div>
@@ -445,5 +445,6 @@
     crossorigin="anonymous"></script>
 
 </body>
+
 
 </html>
