--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="col-lg-3 text-center">
           <div class="card border-0 bg-light mb-2">
             <div class="card-body">
-              <img src="energyimg.PNG" class="img-fluid" width="222px;">
+              <img src="energyimg.png" class="img-fluid" width="222px;">
             </div>
           </div>
           <h6>Energy Food</h6>
@@ -116,7 +116,7 @@
         <div class="col-lg-3 text-center">
           <div class="card border-0 bg-light mb-2">
             <div class="card-body">
-              <img src="beans.PNG" class="img-fluid" width="200px;">
+              <img src="beans.png" class="img-fluid" width="200px;">
             </div>
           </div>
           <h6>Energy Food</h6>
@@ -125,7 +125,7 @@
         <div class="col-lg-3 text-center">
           <div class="card border-0 bg-light mb-2">
             <div class="card-body">
-              <img src="milkimg.PNG" class="img-fluid" width="200px ;">
+              <img src="milkimg.png" class="img-fluid" width="200px ;">
             </div>
           </div>
           <h6>Energy Food</h6>
@@ -134,7 +134,7 @@
         <div class="col-lg-3 text-center">
           <div class="card border-0 bg-light mb-2">
             <div class="card-body">
-              <img src="refillimg.PNG" class="img-fluid" width="200px">
+              <img src="refillimg.png" class="img-fluid" width="200px">
             </div>
           </div>
           <h6>Energy Food</h6>
@@ -448,3 +448,4 @@
 
 
 </html>
+
