--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         </div>
         <div class="row">
           <div class="col-lg-4">
-            <img src="woman1img.JPG" class="img-fluid mb-3" alt="">
+            <img src="woman1img.jpg" class="img-fluid mb-3" alt="">
             <h5>Best Quality Product</h5>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur laboriosam deleniti molestias!
               Dolorem ipsa praesentium quas officia sapiente itaque repellat.</p>
@@ -177,7 +177,7 @@
               Dolorem ipsa praesentium quas officia sapiente itaque repellat.</p>
           </div>
           <div class="col-lg-4 ">
-            <img src="woman1img.JPG" class="img-fluid mb-3" alt="">
+            <img src="woman1img.jpg" class="img-fluid mb-3" alt="">
             <h5>Best Quality Product</h5>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur laboriosam deleniti molestias!
               Dolorem ipsa praesentium quas officia sapiente itaque repellat.</p>
@@ -448,4 +448,5 @@
 
 
 </html>
+
 
