--- a/trending.html
+++ b/trending.html
@@ -60,7 +60,7 @@
       <div class="col-lg-3 text-center">
         <div class="card border-0 bg-light mb-2">
           <div class="card-body">
-            <img src="energyimg.PNG" class="img-fluid" width="150px;"  >
+            <img src="energyimg.png" class="img-fluid" width="150px;"  >
             <h6 style="margin-top: 10px;">Energy Food</h6>
              <p>$29.35</p>
           </div>
@@ -70,7 +70,7 @@
       <div class="col-lg-3 text-center">
         <div class="card border-0 bg-light mb-2">
           <div class="card-body">
-            <img src="beans.PNG" class="img-fluid" width="140px;">
+            <img src="beans.png" class="img-fluid" width="140px;">
             <h6 style="margin-top: 3px;">Energy Food</h6>
               <p>$29.35</p>
           </div>
@@ -79,7 +79,7 @@
         <div class="col-lg-3 text-center">
         <div class="card border-0 bg-light mb-2">
           <div class="card-body">
-            <img src="milkimg.PNG" class="img-fluid" width="140px ;"  >
+            <img src="milkimg.png" class="img-fluid" width="140px ;"  >
             <h6>Energy Food</h6>
              <p>$29.35</p>
           </div>
@@ -88,7 +88,7 @@
         <div class="col-lg-3 text-center">
         <div class="card border-0 bg-light mb-2">
           <div class="card-body">
-            <img src="refillimg.PNG" class="img-fluid" width="140px" >
+            <img src="refillimg.png" class="img-fluid" width="140px" >
               <h6>Energy Food</h6>
                 <p>$29.35</p>
           </div>
@@ -161,4 +161,5 @@
     crossorigin="anonymous"></script>
 
 </body>
+
 </html>
