--- a/store.html
+++ b/store.html
@@ -91,7 +91,7 @@
         <div class="col-lg-3 text-center">
           <div class="card border-0 bg-light mb-2">
             <div class="card-body">
-              <img src="refillimg.PNG" class="img-fluid" width="150px">
+              <img src="refillimg.png" class="img-fluid" width="150px">
             </div>
           </div>
           <h6>Refill Packet</h6>
@@ -121,7 +121,7 @@
         <div class="col-lg-3 text-center">
           <div class="card border-0 bg-light mb-2">
             <div class="card-body">
-              <img src="beans.PNG" class="img-fluid" width="150px;">
+              <img src="beans.png" class="img-fluid" width="150px;">
             </div>
           </div>
           <h6>Beans Packet</h6>
@@ -173,7 +173,7 @@
         <div class="col-lg-3 text-center">
           <div class="card border-0 bg-light mb-2">
             <div class="card-body">
-              <img src="beans.PNG" class="img-fluid" width="150px;">
+              <img src="beans.png" class="img-fluid" width="150px;">
             </div>
           </div>
           <h6>Green Beans</h6>
@@ -253,3 +253,4 @@
 </body>
 
 </html>
+
