--- a/store.html
+++ b/store.html
@@ -70,7 +70,7 @@
         <div class="col-lg-3 text-center">
           <div class="card border-0 bg-light mb-2">
             <div class="card-body">
-              <img src="beans.PNG" class="img-fluid" width="150px;">
+              <img src="beans.png" class="img-fluid" width="150px;">
             </div>
           </div>
           <h6>Tasty Green Beans</h6>
@@ -253,4 +253,5 @@
 </body>
 
 </html>
+
 
