--- a/organic.html
+++ b/organic.html
@@ -58,7 +58,7 @@
         </div>
             <div class="row">
               <div class="col-lg-4">
-                <img src="woman1img.JPG" class="img-fluid mb-3"  alt="">
+                <img src="woman1img.jpg" class="img-fluid mb-3"  alt="">
                 <h5>Best Quality Product</h5>
                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur laboriosam deleniti molestias!
                  Dolorem ipsa praesentium quas officia sapiente itaque repellat.</p>
@@ -70,7 +70,7 @@
                  Dolorem ipsa praesentium quas officia sapiente itaque repellat.</p>
               </div>
               <div class="col-lg-4 ">
-                <img src="woman1img.JPG" class="img-fluid mb-3" alt="">
+                <img src="woman1img.jpg" class="img-fluid mb-3" alt="">
                 <h5>Best Quality Product</h5>
                     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur laboriosam deleniti molestias!
                            Dolorem ipsa praesentium quas officia sapiente itaque repellat.</p>
@@ -138,5 +138,6 @@
     crossorigin="anonymous"></script>
 
 </body>
+
 
 </html>
