--- a/organic.html
+++ b/organic.html
@@ -64,7 +64,7 @@
                  Dolorem ipsa praesentium quas officia sapiente itaque repellat.</p>
               </div>
               <div class="col-lg-4">
-                <img src="saladimg.jpg" class="img-fluid mb-3" style="height: 350px;" alt="">
+                <img src="saladimg.jpg" class="img-fluid mb-3" style="height: 350px; width:300px;" alt="">
                 <h5>Best Quality Product</h5>
                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur laboriosam deleniti molestias!
                  Dolorem ipsa praesentium quas officia sapiente itaque repellat.</p>
