--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class="container py-5">
       <div class="row py-5 ">
         <div class="col-lg5 m-auto text-center">
-          <h1>What's Trending</h1>
+         <marquee behavior="" direction="right" scrollamount="15px"> <h1>What's Trending</h1></marquee>
           <h6 style="color: green;">Be Healty Natural Organic Product</h6>
         </div>
       </div>
@@ -159,7 +159,7 @@
       <div class="container py-5">
         <div class="row py-5">
           <div class="col-lg-8 m-auto text-center">
-            <h1>Welcome to Our Organic Food Society</h1>
+            <marquee><h1>Welcome to Our Organic Food Society</h1></marquee>
             <h6 style="color: green;">Be Healty Natural Organic Product</h6>
           </div>
         </div>
@@ -397,7 +397,7 @@
     <div class="conatiner py-5">
       <div class="row">
         <div class="col-lg-9 m-auto text-center">
-          <h1>Join Our Secret Society</h1>
+          <marquee direction="right" scrollamount="15px"><h1>Join Our Secret Society</h1></marquee>
           <input type="text" class="px-3" placeholder="Enter Your Email">
           <button class="btn2">Sumbit</button>
         </div>
