--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="slide.jpg" class="d-block w-100" alt="...">
+      <img src="slide1.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption ">
         <h5>Choose What You Want</h5>
         
@@ -207,3 +207,4 @@
 </body>
 
 </html>
+
